implement sonarlint recommendations